--- a/saiyid_main.ipynb
+++ b/saiyid_main.ipynb
@@ -44,7 +44,8 @@
     "pharm_csv = os.path.join(os.getcwd(), \"Data\", \"pharmacists.csv\")\n",
     "pharm_df = pd.read_csv(pharm_csv)\n",
     "##Changing column names\n",
-    "pharm_df = pharm_df.rename(columns = {\"First Tooltip\" : \"Pharmicists Per 10,000\"}).drop(columns =[\"Indicator\"])"
+    "pharm_df = pharm_df.rename(columns = {\"First Tooltip\" : \"Pharmicists Per 10,000\"}).drop(columns =[\"Indicator\"])\n",
+    "pharm_df['Location'] = pharm_df['Location'].str.replace(\"Bolivia (Plurinational state of)\",\"Bolivia\")\n"
    ]
   },
   {
@@ -56,7 +57,8 @@
     "med_doctors_csv = os.path.join(os.getcwd(), \"Data\", \"medicalDoctors.csv\")\n",
     "med_doctors_df = pd.read_csv(med_doctors_csv)\n",
     "##Changing column names\n",
-    "med_doctors_df = med_doctors_df.rename(columns = {\"First Tooltip\" : \"Medical Doctors Per 10,000\"}).drop(columns =[\"Indicator\"])"
+    "med_doctors_df = med_doctors_df.rename(columns = {\"First Tooltip\" : \"Medical Doctors Per 10,000\"}).drop(columns =[\"Indicator\"])\n",
+    "med_doctors_df['Location'] = med_doctors_df['Location'].str.replace(\"Bolivia (Plurinational state of)\",\"Bolivia\")\n"
    ]
   },
   {
@@ -355,6 +357,7 @@
     "hand_wash_df = hand_wash_df[hand_wash_df[\"Dim1\"].str.contains(\"Urban\")==False]\n",
     "hand_wash_df = hand_wash_df[hand_wash_df[\"Dim1\"].str.contains(\"Rural\")==False]\n",
     "hand_wash_df = hand_wash_df.drop(columns = {\"Dim1\"})\n",
+    "hand_wash_df['Location'] = hand_wash_df['Location'].str.replace(\"Bolivia (Plurinational state of)\",\"Bolivia\")\n",
     "hand_wash_df"
    ]
   },
@@ -367,7 +370,8 @@
     "drink_water_csv = os.path.join(os.getcwd(), \"Data\", \"basicDrinkingWaterServices.csv\")\n",
     "drink_water_df = pd.read_csv(drink_water_csv)\n",
     "##Changing column names\n",
-    "drink_water_df = drink_water_df.rename(columns = {\"First Tooltip\" : \"Population using at least basic drinking-water services (%)\"}).drop(columns =[\"Indicator\"])"
+    "drink_water_df = drink_water_df.rename(columns = {\"First Tooltip\" : \"Population using at least basic drinking-water services (%)\"}).drop(columns =[\"Indicator\"])\n",
+    "drink_water_df['Location'] = drink_water_df['Location'].str.replace(\"Bolivia (Plurinational state of)\",\"Bolivia\")"
    ]
   },
   {
@@ -382,7 +386,8 @@
     "sanitize_df = sanitize_df.rename(columns = {\"First Tooltip\" : \"Population using at least basic sanitization services (%)\"}).drop(columns =[\"Indicator\"])\n",
     "sanitize_df = sanitize_df[sanitize_df[\"Dim1\"].str.contains(\"Urban\")==False]\n",
     "sanitize_df = sanitize_df[sanitize_df[\"Dim1\"].str.contains(\"Rural\")==False]\n",
-    "sanitize_df = sanitize_df.drop(columns = {\"Dim1\"})"
+    "sanitize_df = sanitize_df.drop(columns = {\"Dim1\"})\n",
+    "sanitize_df['Location'] = sanitize_df['Location'].str.replace(\"Bolivia (Plurinational state of)\",\"Bolivia\")"
    ]
   },
   {
@@ -997,6 +1002,61 @@
     "merge_df4 = pd.merge(merge_df3, drink_water_df, on = [\"Location\", \"Period\"], how = \"outer\")\n",
     "final_merge_df = pd.merge(merge_df4, sanitize_df, on = [\"Location\", \"Period\"], how = \"outer\")\n",
     "final_merge_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_merge_df[\"Continents\"] = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for index, row in d3.iterrows():\n",
+    "#     # get restaurant type from df\n",
+    "#     country = row[‘Location’]\n",
+    "#     # print(country)\n",
+    "#     c_to_a = pc.country_name_to_country_alpha2(country)\n",
+    "#     # print(c_to_a)    \n",
+    "#     c_to_c = pc.country_alpha2_to_continent_code(c_to_a)   \n",
+    "#     d3.loc[index, “Country”]= c_to_c\n",
+    "# d3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"Invalid Country Name: 'Bolivia (Plurinational State of)'\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-1db3cf306b46>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mcountry\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Location'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;31m# print(country)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mc_to_a\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcountry_name_to_country_alpha2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcountry\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[1;31m# print(c_to_a)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mc_to_c\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcountry_alpha2_to_continent_code\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc_to_a\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Documents\\New folder\\lib\\site-packages\\pycountry_convert\\convert_countries.py\u001b[0m in \u001b[0;36mcountry_name_to_country_alpha2\u001b[1;34m(cn_name, cn_name_format)\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcn_name\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdict_country_name_to_country_alpha2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 71\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Country Name: '{0}'\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcn_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     72\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mdict_country_name_to_country_alpha2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcn_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"Invalid Country Name: 'Bolivia (Plurinational State of)'\""
+     ]
+    }
+   ],
+   "source": [
+    "for index, row in final_merge_df.iterrows():\n",
+    "    # get country\n",
+    "    country = row['Location']\n",
+    "    # print(country)\n",
+    "    c_to_a = pc.country_name_to_country_alpha2(country)\n",
+    "    # print(c_to_a)    \n",
+    "    c_to_c = pc.country_alpha2_to_continent_code(c_to_a)   \n",
+    "    final_merge_df.loc[index, 'Location']= c_to_c "
    ]
   },
   {
