pushing continent cleaning of df

--- a/debra_main.ipynb
+++ b/debra_main.ipynb
@@ -504,239 +504,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Period</th>\n",
-       "      <th>Pharmicists Per 10,000</th>\n",
-       "      <th>Medical Doctors Per 10,000</th>\n",
-       "      <th>Life Expectancy</th>\n",
-       "      <th>Population with basic handwashing facilities at home (%)</th>\n",
-       "      <th>Population using at least basic drinking-water services (%)</th>\n",
-       "      <th>Population using at least basic sanitization services (%)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>2.78</td>\n",
-       "      <td>63.763</td>\n",
-       "      <td>37.67</td>\n",
-       "      <td>54.84</td>\n",
-       "      <td>42.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>2.85</td>\n",
-       "      <td>63.377</td>\n",
-       "      <td>37.59</td>\n",
-       "      <td>52.39</td>\n",
-       "      <td>40.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>2.98</td>\n",
-       "      <td>62.966</td>\n",
-       "      <td>37.52</td>\n",
-       "      <td>49.96</td>\n",
-       "      <td>39.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>2.41</td>\n",
-       "      <td>62.054</td>\n",
-       "      <td>37.37</td>\n",
-       "      <td>45.19</td>\n",
-       "      <td>36.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>2.52</td>\n",
-       "      <td>61.553</td>\n",
-       "      <td>37.30</td>\n",
-       "      <td>42.84</td>\n",
-       "      <td>35.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17421</th>\n",
-       "      <td>Viet Nam</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>79.45</td>\n",
-       "      <td>59.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17422</th>\n",
-       "      <td>Viet Nam</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>78.47</td>\n",
-       "      <td>57.95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17423</th>\n",
-       "      <td>Viet Nam</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>75.54</td>\n",
-       "      <td>52.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17424</th>\n",
-       "      <td>Republic of Korea</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>100.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17425</th>\n",
-       "      <td>Republic of Korea</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>100.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>17426 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Location  Period  Pharmicists Per 10,000  \\\n",
-       "0            Afghanistan    2016                    0.47   \n",
-       "1            Afghanistan    2015                    0.50   \n",
-       "2            Afghanistan    2014                    0.51   \n",
-       "3            Afghanistan    2012                    0.27   \n",
-       "4            Afghanistan    2011                    0.28   \n",
-       "...                  ...     ...                     ...   \n",
-       "17421           Viet Nam    2004                     NaN   \n",
-       "17422           Viet Nam    2003                     NaN   \n",
-       "17423           Viet Nam    2000                     NaN   \n",
-       "17424  Republic of Korea    2001                     NaN   \n",
-       "17425  Republic of Korea    2000                     NaN   \n",
-       "\n",
-       "       Medical Doctors Per 10,000  Life Expectancy  \\\n",
-       "0                            2.78           63.763   \n",
-       "1                            2.85           63.377   \n",
-       "2                            2.98           62.966   \n",
-       "3                            2.41           62.054   \n",
-       "4                            2.52           61.553   \n",
-       "...                           ...              ...   \n",
-       "17421                         NaN              NaN   \n",
-       "17422                         NaN              NaN   \n",
-       "17423                         NaN              NaN   \n",
-       "17424                         NaN              NaN   \n",
-       "17425                         NaN              NaN   \n",
-       "\n",
-       "       Population with basic handwashing facilities at home (%)  \\\n",
-       "0                                                  37.67          \n",
-       "1                                                  37.59          \n",
-       "2                                                  37.52          \n",
-       "3                                                  37.37          \n",
-       "4                                                  37.30          \n",
-       "...                                                  ...          \n",
-       "17421                                                NaN          \n",
-       "17422                                                NaN          \n",
-       "17423                                                NaN          \n",
-       "17424                                                NaN          \n",
-       "17425                                                NaN          \n",
-       "\n",
-       "       Population using at least basic drinking-water services (%)  \\\n",
-       "0                                                  54.84             \n",
-       "1                                                  52.39             \n",
-       "2                                                  49.96             \n",
-       "3                                                  45.19             \n",
-       "4                                                  42.84             \n",
-       "...                                                  ...             \n",
-       "17421                                              79.45             \n",
-       "17422                                              78.47             \n",
-       "17423                                              75.54             \n",
-       "17424                                                NaN             \n",
-       "17425                                                NaN             \n",
-       "\n",
-       "       Population using at least basic sanitization services (%)  \n",
-       "0                                                  42.05          \n",
-       "1                                                  40.71          \n",
-       "2                                                  39.37          \n",
-       "3                                                  36.75          \n",
-       "4                                                  35.46          \n",
-       "...                                                  ...          \n",
-       "17421                                              59.79          \n",
-       "17422                                              57.95          \n",
-       "17423                                              52.37          \n",
-       "17424                                             100.00          \n",
-       "17425                                             100.00          \n",
-       "\n",
-       "[17426 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-6d9e08542130>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmerge_df3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmerge_df2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhand_wash_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mon\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Location\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Period\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"outer\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmerge_df4\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmerge_df3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdrink_water_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mon\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Location\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Period\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"outer\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfinal_merge_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmerge_df4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msanitize_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mon\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Location\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Period\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"outer\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mfinal_merge_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -938,9 +718,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-7-8f5fecbdcbdd>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-8f5fecbdcbdd>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    country = row[‘Location’]\u001b[0m\n\u001b[1;37m                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
    "source": [
     "#Put info into Continent Row based on Location\n",
     "for index, row in d3.iterrows():\n",
