--- a/debra_main.ipynb
+++ b/debra_main.ipynb
@@ -2014,6 +2014,7 @@
     "# Equal axis\n",
     "doctors_pie.set_aspect('equal') \n",
     "\n",
+    "plt.savefig(\"../Graphics/pie.png\")\n",
     "# Show plot\n",
     "plt.show()"
    ]
