--- a/main.ipynb
+++ b/main.ipynb
@@ -803,7 +803,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1b5042f9a90>"
+       "<matplotlib.collections.PathCollection at 0x143342a9a60>"
       ]
      },
      "execution_count": 8,
@@ -836,7 +836,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1b5043989a0>"
+       "<matplotlib.collections.PathCollection at 0x143343489d0>"
       ]
      },
      "execution_count": 9,
@@ -869,7 +869,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1b5043f4760>"
+       "<matplotlib.collections.PathCollection at 0x143343a3880>"
       ]
      },
      "execution_count": 10,
@@ -1166,7 +1166,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1b504458460>]"
+       "[<matplotlib.lines.Line2D at 0x14334406580>]"
       ]
      },
      "execution_count": 13,
@@ -1218,7 +1218,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1b5044b9370>"
+       "<matplotlib.collections.PathCollection at 0x14334468490>"
       ]
      },
      "execution_count": 15,
@@ -2906,6 +2906,24 @@
     "print(f\"The r-squared is: {rvalue**2}\")\n",
     "plt.savefig(\"Graphics/Pharmicists Per 10,000 vs Population using at least basic drinking-water services (%)\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv(\"finalDataFrame.csv\")"
    ]
   },
   {
